UI Bootstrap downgrade (animation issues) Put build time into timetable presentation model Seamless timetable refresh Sort timetable route groups by name instead of min distance Route group expand/collapse animation BKK Futar API calls fine tune

--- a/app.css
+++ b/app.css
@@ -90,3 +90,7 @@ html, body {
 .row-body {
     padding: 5px;
 }
+
+.link {
+    cursor: pointer;
+}
